# mlops-zoomcamp-hw-2025

./: .gitignore
homeworks/: main.py  pyproject.toml
homeworks/hw-01/: hw01.ipynb
homeworks/hw-02/: hpo.py  hw.ipynb  register_model.py  train.py
homeworks/hw-03/: ochestration.py
homeworks/hw-04/: starter.ipynb  starter.py
homeworks/hw-05/: main.py  pyproject.toml  scratchpad.ipynb
