[project]
name = "homeworks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hyperopt>=0.2.7",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "mlflow==2.20.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "setuptools==80.8.0",
]
